--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.10.2",
-    "@blueprintjs/core": "^3.33.0",
-    "bad-words": "^3.0.3",
+    "@babel/runtime": "^7.17.2",
+    "@blueprintjs/core": "^3.53.0",
+    "@blueprintjs/icons": "^3.32.0",
+    "bad-words": "^3.0.4",
     "bcrypt": "^5.0.0",
     "meteor-node-stubs": "0.4.1",
     "minimist": ">=0.2.1",
     "moment": "^2.29.1",
-    "react": "16.5.2",
+    "react": "^16.5.2",
     "react-browser-detection": "^1.2.1",
-    "react-dom": "16.5.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "4.3.1",
     "simpl-schema": "1.5.5"
   },
