--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "name",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "deploy": "MONGO_URL=mongodb+srv://ben:5HJx7oczCrTp5ICs@culturalratchet.ctx4b.mongodb.net/CSOP meteor run --port 2998 --settings deployment.json"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
+    "@babel/runtime": "^7.17.8",
     "@blueprintjs/core": "^3.53.0",
     "@blueprintjs/icons": "^3.32.0",
     "bad-words": "^3.0.4",
